# SDProject

./: .gitignore  README.md  tatus
.metadata/: version.ini
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
BluetoothTuner/: .gitignore  BluetoothManager.py  GenQtGui.py  Main.py  MainWindow.py
BluetoothTuner/Arduino/BalanceDesktop/: BalanceDestkop.ino
BluetoothTuner/Arduino/TunerSketch/: TunerSketch.ino
BluetoothTuner/Qt/: output
BluetoothTuner/Qt/untitled/: mainwindow.ui  untitled.pro
GroundDetector/: main.py
IOS/: .gitignore  Podfile
IOS/SDProject/: AppDelegate.swift  Info.plist  SecondViewController.swift  ViewController.swift
IOS/SDProject.xcodeproj/: project.pbxproj
IOS/SDProject.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IOS/SDProject/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
IOS/SDProjectTests/: SDProjectTests.swift
IOS/SDProjectUITests/: SDProjectUITests.swift
IOS/Watch/: Info.plist  Interface.storyboard
IOS/Watch Extension/: ExtensionDelegate.swift  Info.plist  InterfaceController.swift  NotificationController.swift  SecondInterfaceController.swift  WatchDriver.swift
Matlab/: Encoder_Generator.m  Encoder_sym.m  GPS_Generator.m
Matlab/EKF/: EKF.py  EkfTest.py
Robot/src/: main.cpp
SDMicro/: .cproject  .project  LinkerScript.ld  MainPCB.xml  README.md  SDMicro Debug.cfg  SDMicro Run.cfg
SDMicro/Debug/: SDMicro.elf  output.map
SDMicro/src/: main.c  pi_control.c
SDMicro/startup/: startup_stm32f0xx.S
SDProject/: Info.plist  SecondViewController.swift  ViewController.swift
SDProject.xcodeproj/: project.pbxproj
SDProject/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
boards/: .gitignore
boards/Adafruit-BNO055-Breakout-PCB-master/: Adafruit BNO055.lbr  Adafruit BNO055.scr  Adafruit BNO055_ReplaceLibParts.scr
boards/CP2102-USB-UART-converter-Eagle-Files-master/v1.0/: CP2102 breakout.lbr  CP2102 breakout.scr
boards/FT232R-Breakout_v37/: FT232R-Breakout_v37.lbr  FT232R-Breakout_v37.scr
boards/FTDI-Friend-master/: ftdifriend.brd  ftdifriend.lbr  ftdifriend.scr
boards/JST-Connectors/: Rembrandt Electronics - JST XH Connectors v1-0.lbr
boards/Libraries/: 0ZCJ0050FF2G.lbr  1825910-6.lbr  4N28.lbr  CL21F104ZBCNNNC.lbr  DMF-AS3935_Project.lbr  DMF-Additional_Supply_dmf.lbr  DMF-Audio_Connectors.lbr  DMF-Bigger_SMD_footprints.lbr  DMF-ExtraCore-noProgHeaders.lbr  DMF-MAX1473.lbr  DMF-MAX17043_TDFN.lbr  DMF-SolarChargerPlaceholder.lbr  DMF-TI_DIR9001.lbr  DMF-TPS63020_SON-N14.lbr  DMF-TimerProject.lbr  DMF-con_JST_XH_dmf.lbr  DMF-con_Weidmuller_171501000.lbr  DMF_Capacitors&Resistors.lbr  DMF_Displays.lbr  DMF_Logo.lbr  DMF_NE555Project.lbr  DMF_Photon.lbr  DMF_adafruit.lbr  DMF_digitalPOT_i2C.lbr  LD1117S33CTR.lbr  MCU.lbr  MicroUsb.lbr  RESET_FUSE.lbr  STM32F070CBT6.lbr  TL431AIDBZTG4.lbr  TXS0104EDR.lbr
boards/Main Library/: main_library.lbr
boards/Main PCB/: Main.brd  Main.s#1  Main.sch  template_2_layer.cam
boards/McuTest/: PrototypeMcu.brd  PrototypeMcu.pro  PrototypeMcu.sch  eagle.epf
boards/NS-HP-GL/: Board.b#1  Board.b#2  Board.brd  Board.lbr  Board.s#1  Board.s#2  Board.sch  NS-HP-GL.lbr  eagle.epf  pinhead.lbr
boards/OpticalEncoderSch/: IREncoder.brd  IREncoder.s#1  IREncoder.s#2  IREncoder.sch
iOS/: Podfile
iOS/D2U/: AppDelegate.swift  DeliveryInformation.swift  DeliveryLocation.swift  DeliverySettingsController.swift  GoogleService-Info.plist  Info.plist  MapMainController.swift  MapMainSettings.swift  ViewController.swift  Waypoint.swift
iOS/D2U.xcodeproj/: project.pbxproj
iOS/D2U.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/D2U.xcworkspace/: contents.xcworkspacedata
iOS/D2U/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
iOS/D2UTests/: D2UTests.swift
iOS/D2UUITests/: D2UUITests.swift
ros_ws/: .gitignore  DataLog.txt  startup.sh
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros_ws/launch/: cam.launch  main.launch  mapviz.launch  output.tt  rtk_controller.launch  save_lidar.launch  test_bench.launch  usb_cam-test.launch
ros_ws/scrap/: sub_imu_pub_euler.py
ros_ws/src/ekf/: CMakeLists.txt  package.xml
ros_ws/src/ekf/scripts/: EKF.py  ekf_node.py  goal_point_display.py  mikes_output.txt
ros_ws/src/fb/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/fb/launch/: fb.launch
ros_ws/src/fb/scripts/: fb_manager.py
ros_ws/src/fb/src/: fb_manager.py
ros_ws/src/path_planning/: CMakeLists.txt  package.xml
ros_ws/src/path_planning/include/: GLDebug.h  GlobalMap.h  GlobalNode.h  LocalOp.h  Map.h  Node.h  xml_reader.h
ros_ws/src/path_planning/src/: GLDebug.cpp  GlobalMap.cpp  GlobalNode.cpp  LocalOp.cpp  Map.cpp  Node.cpp  main.cpp  xml_reader.cpp
ros_ws/src/perception/: CMakeLists.txt  (+1 more)
ros_ws/src/rtk/: .makefile.swp  CMakeLists.txt  DataLog.txt  gpggaTest.txt  makefile  ntripclient  package.xml  purdue_mapv1.0.txt  purdue_mapv1.0.xml  startntripclient.sh
ros_ws/src/rtk/include/: Landmark.h  MapData.h  NMEAData.h  ntrip_helper.h  serial.h  xml_reader.h
ros_ws/src/rtk/launch/: rtk.launch
ros_ws/src/rtk/msg/: HeadingSpeed.msg
ros_ws/src/rtk/ntrip_self/: Node.cpp  makefile  ntrip_helper.c  ntripclient  ntripclient.c  serial.c  startntripclient.sh  xml_reader.cpp
ros_ws/src/rtk/ntrip_self/include/: Node.h  ntrip_helper.h  xml_reader.h
ros_ws/src/rtk/src/: Landmark.cpp  MapData.cpp  NMEAData.cpp  Node.cpp  ntrip_helper.cpp  ntripclient.cpp  serial.cpp  xml_reader.cpp
ros_ws/src/rtk_controller/: CMakeLists.txt  lukes_test_path.xml  package.xml  purdue_mapv1.0.xml
ros_ws/src/rtk_controller/include/: LocalOp.h  Map.h  MapData.h  MapNode.h  xml_reader.h
ros_ws/src/rtk_controller/src/: LocalOp.cpp  Map.cpp  MapData.cpp  MapNode.cpp  Node.cpp  main.cpp  rtk_manager.py  xml_reader.cpp
ros_ws/src/serial/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/serial/launch/: serial.launch
ros_ws/src/serial/scripts/: .serial_manager.py.swp  serial_manager.py
ros_ws/src/serial/src/: serial_manager.py
(+57 files in other folders)
