<?xml version="1.0"?>
<package format="2">
  <name>ekf</name>
  <version>0.0.0</version>
  <description>The ekf package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nvidia@todo.todo">nvidia</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <build_depend>std_msgs</build_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
